--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
                     <div class="col-xl-6">
                         <div class="text-center text-white">
                             <!-- Page heading-->
-                            <h1 class="mb-5">Bienvenido a Pincheira & Asociados</h1>
+                            <h2 class="mb-5">Bienvenido a</h2>
+                            <h1 class="mb-5">Pincheira & Asociados</h1>
                         </div>
                     </div>
                 </div>
