--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
                         <p class="lead mb-0">When you use a theme created by Start Bootstrap, you know that the theme will look great on any device, whether it's a phone, tablet, or desktop the page will behave responsively!</p>
                     </div>
                 </div>
-                <div class="row g-0">
-                    <div class="col-lg-6 text-white showcase-img" <iframe width="900" height="506" src="https://www.youtube.com/embed/n9BxDtcSHqA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>></div>
+                <div class="row g-0"><iframe width="900" height="506" src="https://www.youtube.com/embed/n9BxDtcSHqA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <div class="col-lg-6 text-white showcase-img"></div>
                     <div class="col-lg-6 my-auto showcase-text">
                         <h2>Updated For Bootstrap 5</h2>
                         <p class="lead mb-0">Newly improved, and full of great utility classes, Bootstrap 5 is leading the way in mobile responsive web development! All of the themes on Start Bootstrap are now using Bootstrap 5!</p>
