--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
                         <p class="lead mb-0">When you use a theme created by Start Bootstrap, you know that the theme will look great on any device, whether it's a phone, tablet, or desktop the page will behave responsively!</p>
                     </div>
                 </div>
-                <div class="row g-0"><iframe width="900" height="506" src="https://www.youtube.com/embed/n9BxDtcSHqA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    <div class="col-lg-6 text-white showcase-img"></div>
+                <div class="row g-0">
+                    <div class="col-lg-6 text-white showcase-img"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3112.153803602879!2d-72.59100728479594!3d-38.73723267959569!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9614d3dd036fc8e3%3A0x2eb45146aab07fbe!2sManuel%20Bulnes%20368%2C%20Temuco%2C%20Araucan%C3%ADa!5e0!3m2!1ses-419!2scl!4v1651865448623!5m2!1ses-419!2scl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
                     <div class="col-lg-6 my-auto showcase-text">
                         <h2>Updated For Bootstrap 5</h2>
                         <p class="lead mb-0">Newly improved, and full of great utility classes, Bootstrap 5 is leading the way in mobile responsive web development! All of the themes on Start Bootstrap are now using Bootstrap 5!</p>
