--- a/index.html
+++ b/index.html
@@ -45,21 +45,21 @@
                     <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('assets/img/bg-showcase-1.jpg')"></div>
                     <div class="col-lg-6 order-lg-1 my-auto showcase-text">
                             <h2>¿Quienes son Pincheira&Asociados?</h2>
-                        <p class="lead mb-0">Aqui va lo de la respuesta de los chicos y preguntar si tienen foto equipo</p>
+                        <p class="lead mb-0">Somos un grupo de personas que se encarga de solucionar problemas, teniendo en cuenta que los tiempos de ahora son complejos, por lo mismo tratamos de dar soluciones integrales, tratando de ser comprometidos con los clientes y buscando las mejores soluciones para ellos</p>
                     </div>
                 </div>
                 <div class="row g-0">
                     <div class="col-lg-6 text-white showcase-img"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3112.153803602879!2d-72.59100728479594!3d-38.73723267959569!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9614d3dd036fc8e3%3A0x2eb45146aab07fbe!2sManuel%20Bulnes%20368%2C%20Temuco%2C%20Araucan%C3%ADa!5e0!3m2!1ses-419!2scl!4v1651865448623!5m2!1ses-419!2scl" width="760" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
                     <div class="col-lg-6 my-auto showcase-text">
                         <h2>¿Donde estamos ubicados?</h2>
-                        <p class="lead mb-0">Estamos ubicados en Manuel Bulnes 368 Of. 401 en el corazon de la capital de la IX region, Temuco</p>
+                        <p class="lead mb-0">Estamos ubicados en Manuel Bulnes 368 Of. 401 en el corazon de la IX region, Temuco</p>
                     </div>
                 </div>
                 <div class="row g-0">
                     <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('assets/img/bg-showcase-3.jpg')"></div>
                     <div class="col-lg-6 order-lg-1 my-auto showcase-text">
                         <h2>Metodos de Contacto</h2>
-                        <p class="lead mb-0">MEtodos de contacto de los muxaxos</p>
+                        <p class="lead mb-0">Metodos de contacto de los muchachos</p>
                     </div>
                 </div>
             </div>
@@ -98,42 +98,6 @@
             <div class="container position-relative">
                 <div class="row justify-content-center">
                     <div class="col-xl-6">
-                        <h2 class="mb-4">Ready to get started? Sign up now!</h2>
-                        <!-- Signup form-->
-                        <!-- * * * * * * * * * * * * * * *-->
-                        <!-- * * SB Forms Contact Form * *-->
-                        <!-- * * * * * * * * * * * * * * *-->
-                        <!-- This form is pre-integrated with SB Forms.-->
-                        <!-- To make this form functional, sign up at-->
-                        <!-- https://startbootstrap.com/solution/contact-forms-->
-                        <!-- to get an API token!-->
-                        <form class="form-subscribe" id="contactFormFooter" data-sb-form-api-token="API_TOKEN">
-                            <!-- Email address input-->
-                            <div class="row">
-                                <div class="col">
-                                    <input class="form-control form-control-lg" id="emailAddressBelow" type="email" placeholder="Email Address" data-sb-validations="required,email" />
-                                    <div class="invalid-feedback text-white" data-sb-feedback="emailAddressBelow:required">Email Address is required.</div>
-                                    <div class="invalid-feedback text-white" data-sb-feedback="emailAddressBelow:email">Email Address Email is not valid.</div>
-                                </div>
-                                <div class="col-auto"><button class="btn btn-primary btn-lg disabled" id="submitButton" type="submit">Submit</button></div>
-                            </div>
-                            <!-- Submit success message-->
-                            <!---->
-                            <!-- This is what your users will see when the form-->
-                            <!-- has successfully submitted-->
-                            <div class="d-none" id="submitSuccessMessage">
-                                <div class="text-center mb-3">
-                                    <div class="fw-bolder">Form submission successful!</div>
-                                    <p>To activate this form, sign up at</p>
-                                    <a class="text-white" href="https://startbootstrap.com/solution/contact-forms">https://startbootstrap.com/solution/contact-forms</a>
-                                </div>
-                            </div>
-                            <!-- Submit error message-->
-                            <!---->
-                            <!-- This is what your users will see when there is-->
-                            <!-- an error submitting the form-->
-                            <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3">Error sending message!</div></div>
-                        </form>
                     </div>
                 </div>
             </div>
