--- a/index.html
+++ b/index.html
@@ -71,26 +71,45 @@
                 <div class="row">
                     <div class="col-lg-4">
                         <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-                            <img class="img-fluid rounded-circle mb-3" src="assets/img/testimonials-1.jpg" alt="..." />
-                            <h5>Problema 1</h5>
-                            <p class="font-weight-light mb-0">"Pequeña descripcion de problema 1 y imagen"</p>
+                            <img class="img-fluid rounded-circle mb-3" src="assets/img/derechotrabajador.jpg" alt="..." />
+                            <h5>Derechos del Trabajo</h5>
+                            <p class="font-weight-light mb-0">Prestamos asesorías en juicios
+                                laborales, tanto a empresarios como a
+                                trabajadores, así como ofrecemos el
+                                servicio de auditorías laborales a
+                                emprendedores y pymes para revisar
+                                las relaciones con sus trabajadores y
+                                prever posibles problemas con la
+                                normativa laboral.</p>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-                            <img class="img-fluid rounded-circle mb-3" src="assets/img/testimonials-2.jpg" alt="..." />
-                            <h5>Probema 2</h5>
-                            <p class="font-weight-light mb-0">"pequeña descripcion e imagen"</p>
+                            <img class="img-fluid rounded-circle mb-3" src="assets/img/derechofamilia.jpg" alt="..." />
+                            <h5>Derechos de Familia</h5>
+                            <p class="font-weight-light mb-0">Nuestros abogados prestan asesorías
+                                en divorcios, regulaciones de
+                                alimentos, relación directayregular,
+                                cuidado personalyen materias de
+                                violencia intrafamiliar, entre otras
+                                materias de familia.</p>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-                            <img class="img-fluid rounded-circle mb-3" src="assets/img/testimonials-3.jpg" alt="..." />
-                            <h5>Problema 3 </h5>
-                            <p class="font-weight-light mb-0">"descripcion e imagen"</p>
+                            <img class="img-fluid rounded-circle mb-3" src="assets/img/derechopenal.jpg" alt="..." />
+                            <h5>Derecho Penal</h5>
+                            <p class="font-weight-light mb-0">Especializados en delitos económicos,
+                                contra las personas, la propiedady
+                                delitos sexuales, brindando una sólida
+                                asesoríaydefensa de los intereses de
+                                los representados.</p>
                         </div>
                     </div>
                 </div>
+                <h3 class="mb-5"></h3>
+                <h3 class="mb-5"></h3>
+                <h3 class="mb-5">Entre otros problemas como Derecho Civil y Accidentes de Transito</h3>
             </div>
         </section>
         <!-- Call to Action-->
