--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
                     </div>
                 </div>
                 <div class="row g-0">
-                    <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('assets/img/bg-showcase-3.jpg')"></div>
+                    <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('assets/img/metodosdec.jpg')"></div>
                     <div class="col-lg-6 order-lg-1 my-auto showcase-text">
                         <h2>Metodos de Contacto</h2>
-                        <p class="lead mb-0">Metodos de contacto de los muchachos</p>
+                        <p class="lead mb-0"></p>
                     </div>
                 </div>
             </div>
